--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,15 @@ on:
     - cron: '0 23 * * *'
 # TODO: 将不同的模块分离开 编译模块，定时服务模块
 job:
-  build:
+  build_and_run:
+    name: build and run
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: 12.x
       - run: yarn
       - run: yarn build
       - run: yarn start
