--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: build
-
 on:
   push:
     branches:
@@ -14,9 +13,9 @@ job:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: '12'
       - run: yarn
       - run: yarn build
       - run: yarn start
