--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
   schedule:
     - cron: '0 23 * * *'
 # TODO: 将不同的模块分离开 编译模块，定时服务模块
-job:
+jobs:
   build_and_run:
     name: build and run
     runs-on: ubuntu-latest
