--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "dayjs": "^1.9.3",
     "dotenv": "^8.2.0",
-    "node-fetch": "3.0.0-beta.9"
+    "node-fetch": "3.0.0-beta.9",
+    "winston": "^3.3.3"
   }
 }
