--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -7,8 +7,8 @@ on:
     - cron: '0 23 * * *'
 # TODO: 将不同的模块分离开 编译模块，定时服务模块
 jobs:
-  build_and_run:
-    name: build and run
+  dev:
+    name: dev
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
