--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,4 +1,4 @@
-name: build
+name: dev
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
 # TODO: 将不同的模块分离开 编译模块，定时服务模块
 jobs:
   dev:
-    name: dev
+    name: build and run by ts-node
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
