--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dayjs": "^1.9.3",
     "dotenv": "^8.2.0",
+    "got": "^11.8.1",
     "node-fetch": "3.0.0-beta.9",
     "winston": "^3.3.3"
   }
